moved sword to correct creative tab

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,9 +27,9 @@ displayName="Obsidian Tools" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="obsidian_pickaxe.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Kaupenjoe" #optional
+credits="Thanks to Kaupenjoe for his tutorials" #optional
 # A text field displayed in the mod UI
 authors="Julian Texo" #optional
 # Display Test controls the display for your mod in the server connection screen
@@ -64,3 +64,4 @@ Just Obsidian Tools.
     versionRange="[1.19,1.20)"
     ordering="NONE"
     side="BOTH"
+
